--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,8 @@
-<form action="/ibge/">
-  <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
-  </div>
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
-  </div>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div>
+<form action="/ibge/" method="post">
+
+    <label for="name">CEP:</label>
+    <input type="text" id="cep" name="cep"/><br><br>
+
   <button type="submit" class="btn btn-default">Submit</button>
+
 </form>
